--- a/wotsky_IoT.ipynb
+++ b/wotsky_IoT.ipynb
@@ -320,7 +320,7 @@
         "  predictions = pipeline.predict(X_test)\n",
         "  report = classification_report(y_test, predictions, output_dict=True, zero_division='warn')\n",
         "  fscores.append([name, report['Sensor']['f1-score'], report['Actuator']['f1-score'], report['None']['f1-score']])\n",
-        "  score.append([name, (report['Sensor']['precision'],report['Sensor']['recall']), (report['Actuator']['precision'],report['Actuator']['recall']), (report['None']['precision'],report['None']['precision'])])\n",
+        "  score.append([name, (report['Sensor']['precision'],report['Sensor']['recall']), (report['Actuator']['precision'],report['Actuator']['recall']), (report['None']['precision'],report['None']['recall'])])\n",
         "  print(name)\n",
         "  print(classification_report(y_test, predictions))\n",
         "  print(\"************************************\")\n",
